--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@heroui/react": "^2.8.3",
     "@tailwindcss/postcss": "^4.1.16",
     "framer-motion": "^12.23.12",
+    "lucide-react": "^0.552.0",
     "next": "15.5.2",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.16"
   },
